tests/error/misc_errors/panic_msg_empty.err
Error: Invalid call of overloaded function (at $FILE:7:4)
  | 
5 | @compile_guppy
6 | def foo(x: int) -> None:
7 |     panic()
  |     ^^^^^^^ No variant of overloaded function `panic` takes 0 arguments

Note: Available overloads are:
  def panic(msg: str, ...) -> None
  def panic(msg: str, signal: int, ...) -> None

Guppy compilation failed due to 1 previous error
